update: get all movie by genre/actor/director response